# etc

./: Big-O-analysis.xlsx  README.md  coding_naming_standard.docx  cree_led_test.py  gitCMD.cs  ssh_test.sh
Advanced compilation/: function.h  main.c  main.i  main.s
CRC/: crc16.c
Debug/: debug.h
IPC/: lock_file1  lock_file1.c  mq_reciver  mq_reciver.c  mq_sender  mq_sender.c  msg_q_writer.c  reader  write
NIFTY/: 200 .xlsx  CARachna.xlsx  Candelestic_formula.xlsx  Financial.xlsx  Financial_Calculators.xlsx  (+8 more)
cmakelist/cmake_practice_v1/5.2/: CMakeLists.txt
cmakelist/cmake_practice_v1/5.2/math/: CMakeLists.txt
cmakelist/cmake_practice_v1/5.2/print/: CMakeLists.txt
cmakelist/cmake_practice_v1/5.2/var/: CMakeLists.txt
cmakelist/cmake_practice_v1/5.2/var/inc/var/: var.h
cmakelist/cmake_practice_v1/5.5/: CMakeLists.txt  main  main.c  main.cpp  main1  test.c  test.cpp
cmakelist/cmake_practice_v1/5.5/math/: CMakeLists.txt
data_structure/applications/stack_applications/: CMakeLists.txt  main.c
data_structure/applications/stack_applications/list/: CMakeLists.txt
data_structure/applications/stack_applications/list/inc/list/: linkList.h
data_structure/applications/stack_applications/list/src/: linkList.c
data_structure/applications/stack_applications/queue/: CMakeLists.txt
data_structure/applications/stack_applications/queue/src/: queue.c
data_structure/applications/stack_applications/stack/: CMakeLists.txt
data_structure/applications/stack_applications/stack/inc/stack/: stack.h
data_structure/applications/stack_applications/stack/src/: stack.c
(+1341 files in other folders)
